picture overhaul pt. 1: water goobaloo

--- a/art/frens/index.html
+++ b/art/frens/index.html
@@ -67,7 +67,7 @@
               <li>follow her on insta <a href="https://instagram.com/melancholic.tea?igshid=1ueoktzlnl4w2" target="_blank">> here <</a>
               and check out her on fiverr <a href="https://www.fiverr.com/melancholicguts?source=gig_cards&referrer_gig_slug=draw-your-oc-or-your-favorite-character&ref_ctx_id=ec0cd3c6-e138-4be7-87f5-3e4e81d9a786" target="_blank">> here <</a>
             thanks aton tea!~</li><br>
-            <img src="https://drive.google.com/uc?export=view&id=14an-v4lQrszD6cEG6qshbdh1c47HZdCC"style="width: 500px;"/>
+            <img src="https://vibrant-hodgkin-c6365a.netlify.app/art/frens/1.jpeg"style="width: 500px;"/>
 </ol>
 
 </div>
@@ -77,7 +77,7 @@
         <br><br><h3>Koikoyboi</h3>            <ol class="playlist_info">
           <li>her instagram: <a href="https://instagram.com/koikoyboi?igshid=1329jw99yb64f" target="_blank">> here <</a>
         thanks so much for adapting my art into such a prettier state!~</li><br>
-        <img src="https://drive.google.com/uc?export=view&id=1rZK0gWvhMlye16BwI4BIYEWMXhpVvbG1"style="width: 500px;"/>
+        <img src="https://vibrant-hodgkin-c6365a.netlify.app/art/frens/2.jpeg"style="width: 500px;"/>
 </ol>
 
 
@@ -87,8 +87,8 @@
       <br><br><h3>Orchid Hime</h3>            <ol class="playlist_info">
         <li>her insta: <a href="https://instagram.com/orchidhime?igshid=ttrr1vje1bb8" target="_blank">> here <</a>
       these were from quite awhile ago but i really appreciate them, thanks thanks~</li><br>
-      <img src="https://drive.google.com/uc?export=view&id=1WMtdfGM_Wv8WpmvzT_EU5lCZX7iN4Jr9"style="width: 500px;"/>
-      <img src="https://drive.google.com/uc?export=view&id=1xvYOvZNcJ8i86WUM1_gxZfDgkynISsS3"style="width: 500px;"/>
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/art/frens/3.jpeg"style="width: 500px;"/>
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/art/frens/4.jpeg"style="width: 500px;"/>
 </ol>
 
 
