--- a/book/index.html
+++ b/book/index.html
@@ -59,7 +59,7 @@
 
 
                         <div id="ccontent">
-                            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=11Cn33-2yIgwZKJHwdms7r33A6SuHAM7f" style="width: 160px;"/>
+                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/code/lf.png" style="width: 160px;"/>
                                         <br><br><h3>Lethal Formatter</h3>            <ol class="playlist_info">
                                             <li>1 million 'words' <</li><br>
                             </ol>
