--- a/code/index.html
+++ b/code/index.html
@@ -71,7 +71,7 @@
         </div>
         
         <div id="ccontent">
-            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1Jg0nlJpffub0XoK0hcn-WAiA6s06vl5O" style="width: 160px;"/>
+            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/code/r20_21_05_2019_1440x450_low.jpg" style="width: 160px;"/>
 						<br><br><h3>ggldcs</h3>            <ol class="playlist_info">
 							<li>not impressive, but automated <</li><br>
             </ol>
