--- a/projects/boxmiku/index.html
+++ b/projects/boxmiku/index.html
@@ -36,7 +36,7 @@
     </p>
       <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
 
-      <img src="https://drive.google.com/uc?export=view&id=1Fo-p2UQHlek3wDVF_TrLNV7h4AdiMW_-" width="300px">
+      <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/boxmiku/1.png" width="300px">
      
       
       <h1>Beginnings</h1>
@@ -54,11 +54,11 @@
 
       <h1>Process</h1>
       <p>first i printed this <a href="https://www.thingiverse.com/thing:2825541" target="_blank"> box miku model </a>, a few times actually - oopsi</p>
-      <p><img src="https://drive.google.com/uc?export=view&id=1BT996OXQxCZUU3sICLlDRmeaRrN3zkdg" width="600px"></p>
+      <p><img src="https://vibrant-hodgkin-c6365a.netlify.app/project/boxmiku/1.jpeg" width="600px"></p>
 
 
       <p>then i just started painting! no sanding this time, shhhhhh you can't see it. heres pictures of it when its done:</p>
-      <p><img src="https://drive.google.com/uc?export=view&id=1_DW43u5UXOAaXnF2D62DPgPzNLD2ki2h" width="400px"><img src="https://drive.google.com/uc?export=view&id=1lEJUsMKGVz9RiZX_hqFt5Uk7jRZpZ3NP" width="323px">
+      <p><img src="https://vibrant-hodgkin-c6365a.netlify.app/project/boxmiku/4.jpeg" width="400px"><img src="https://vibrant-hodgkin-c6365a.netlify.app/project/boxmiku/3.jpeg" width="323px">
       </p><p>#nofilter </p>
 
 
