--- a/art/index.html
+++ b/art/index.html
@@ -62,12 +62,12 @@
                             <br><br><h3>Paintings</h3>            <ol class="playlist_info">
                                 <li>my paintings with paint <</li><br>
                             </ol>
-                            <a href="/art/paintings" class="label3">CLICK TO SEE MORE</a>
+                            <a href="/art/paintings" class="label3">click to see more</a>
                     </div>
 
 
                         <div id="ccontent">
-                            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1oWQqccITk_NanMZh2tlljussXZf_GbVP" style="width: 160px;"/>
+                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/art/published/finals/square-logo.png" style="width: 160px;"/>
                             <br><br><h3>Published Era</h3>            <ol class="playlist_info">
                                 <li>re:Live Society Phase Two <</li><br>
                             </ol>
@@ -81,7 +81,7 @@
 				<div id="ccontent">
 								<img class="auditorium" src="../images/art/graphic/1.jpg" style="width: 160px;"/>
 								<br><br><h3>Graphic Design</h3>            <ol class="playlist_info">
-									<li>stuff i do on computer for fun~! <</li><br>
+									<li>stuff i do sometimes <</li><br>
 								</ol>
 								<a href="/art/graphic" class="label3">CLICK TO SEE MORE</a>
 
@@ -93,14 +93,14 @@
                 <div id="ccontent">
                     <img class="auditorium" src="../images/art/draws/3.0.png" style="width: 160px;"/>
                     <br><br><h3>Digital Draws</h3>            <ol class="playlist_info">
-                        <li>since i can't draw irl photoshop exists!~<</li><br>
+                        <li>since i can't draw irl!~<</li><br>
                     </ol>
                     <a href="/art/draws" class="label3">CLICK TO SEE MORE</a>
 
 
                 </div>
 
-
+<!--
                 <div id="ccontent">
                     <img class="auditorium" src="https://drive.google.com/uc?export=view&id=14an-v4lQrszD6cEG6qshbdh1c47HZdCC" style="width: 160px;"/>
                     <br><br><h3>Friend Draws</h3>            <ol class="playlist_info">
@@ -111,7 +111,7 @@
 
                 </div>
 
-<!--
+
                 <div id="ccontent">
                     <img class="auditorium" src="../images/art/wallpaper/1.png" style="width: 160px;"/>
                     <br><br><h3>Wallpapers</h3>            <ol class="playlist_info">
