--- a/re/side.html
+++ b/re/side.html
@@ -39,6 +39,8 @@
 
 <a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
+  
+  <li><a href="https://relivesight.com/projects/gun/">gun</a></li>
   <li><a href="https://relivesight.com/projects/hornet/">hornet</a></li>
   <li><a href="https://relivesight.com/projects/various/">various</a></li>
   <li><a href="https://relivesight.com/projects/deejx2/">deej x2</a></li>
