--- a/concept/index.html
+++ b/concept/index.html
@@ -47,7 +47,7 @@
 
         <div id="content">
             <p>
-               Pages that have been pushed down into the conceptual abyss end up here. Pages i still like but have long since overstayed there due on the homepage.
+               Pages that have been pushed down into the conceptual abyss end up here. More specifically: pages i still like but have long since overstayed there due on the homepage.
             </p>
         </div>
 				<div id="content2">
@@ -61,7 +61,7 @@
 
 
                         <div id="ccontent">
-                            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1EQC4h6Cp1bXrxlWFnkOTEgS1-64xNFl_" style="width: 160px;"/>
+                            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/2.png" style="width: 160px;"/>
                             <br><br><h3>Old Blog</h3>            <ol class="playlist_info">
                                 <li>the old aesthetic blog <</li><br>
                             </ol>
@@ -71,7 +71,7 @@
 
 
                     <div id="ccontent">
-                        <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1p5fi_wLBYjC328ko_E6x9BVx8rM5X9zL" style="width: 160px;"/>
+                        <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/1.png" style="width: 160px;"/>
                         <br><br><h3>Chat Room</h3>            <ol class="playlist_info">
                             <li>it still functions entirely <</li><br>
                         </ol>
@@ -81,7 +81,7 @@
 
 
                 <div id="ccontent">
-                    <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1hW82KzaqqNOIUALcwlwEfr7bm6fBDE7d" style="width: 160px;"/>
+                    <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/3.png" style="width: 160px;"/>
                     <br><br><h3>Concept</h3>            <ol class="playlist_info">
                         <li>page from the old site <</li><br>
                     </ol>
@@ -91,7 +91,7 @@
 
 
             <div id="ccontent">
-                <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1zoTtJcTVzLrQYqYjhrOAelM3KPvNTqK-" style="width: 160px;"/>
+                <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/concept/4.png" style="width: 160px;"/>
                 <br><br><h3>Coming Soon</h3>            <ol class="playlist_info">
                     <li>the coming soon page <</li><br>
                 </ol>
