--- a/manga/index.html
+++ b/manga/index.html
@@ -64,7 +64,7 @@
 
 
 		<div id="ccontent">
-            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1EPpIAAJnlzWmARhhkpuYRdqZWxWbp4r-" style="width: 160px;"/>
+            <img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/manga/mhiahw/housewife.png" style="width: 160px;"/>
 						<br><br><h3>My Husband is a housewife</h3>            <ol class="playlist_info">
 							<li>✿ I LOVE THIS SO MUCH​ ✿ <</li><br>
             </ol>
