--- a/projects/gamedev/index.html
+++ b/projects/gamedev/index.html
@@ -46,12 +46,12 @@
                suprisingly actually yes! so i got to work: downloaded unity, watched the first few weird tutorials, and realized im going to need more than this. after following along with about 6 million tutorials i finally got a prototype of sorts.
                i spent forever making 60 sprites (following a reference im not that talented, yet) and made some dumb tiles (not representative) to give the prototype some flair.
              </p>
-             <img src="https://drive.google.com/uc?export=view&id=1qZbPuAWqT_E067SF4x4b1VkeODxym344" width="500px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/gamedev/roboMJ_Spritesheet.png" width="500px">
              <p>now theres some imprtant things i need to state, these sprites have absolutely 0 relation to the final game and are for testing purposes only.
                though i intend to keep the 1bit style (maybe), dont get too attach to square guy. overall in these few days i added: walking, jumping, wall jumping, dashing, and falling, though that seems like alot
                of progress, i prolly need to rework them completely cuz i followed tutorials for them... either way its good for a start. game develeopment is both harder and easier than i thought.
              </p>
-             <img src="https://drive.google.com/uc?export=view&id=1FwmHfVtysfLBxcVbaC9K9-94d2Kqwli3" width="500px">
+             <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/gamedev/aaaaaaaaaaaaaaaaaaan.png" width="500px">
              <p>i have set up a board to keep track of what things need adding, im going for shooting next, since violence is always the answer</p>
 
              <h1>Log 2: A Sign Off</h1>
