--- a/projects/index.html
+++ b/projects/index.html
@@ -65,6 +65,21 @@
 								</div>
 						</div>
 
+						<div id="content">
+							<img class="auditorium" src="https://vibrant-hodgkin-c6365a.netlify.app/project/gun/1.png" style="width: 250px;"/>
+							
+							<h3 style="float: right; right: 4px;">Gun</h3>
+							
+							<p>11/09/20</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								not a fan of guns, but definitely a fan of how they look. i didnt do the best job tho... painting hard
+								<li class='rr'>Status: [Completed]</li></ol>
+							<div class="label">
+								<p><a href="/projects/gun">Read More</a></p>
+							</div>
+						</div>		
+
 
 
 						<div id="content">
