jkfld;sajkl;fdsa

--- a/highlights/index.html
+++ b/highlights/index.html
@@ -60,11 +60,11 @@
           <li><a href="https://relivesight.com/projects/mikuyboard/" target="_blank">mikuyboard</a> - a 128 keyboard covered in hastune miku stickers</li>
           <li><a href="https://relivesight.com/projects/quarandream/" target="_blank">quarandream</a> - my favorite split keyboard ive made</li>
           <li><a href="https://relivesight.com/projects/encoder/" target="_blank">encoder</a> - channel and volume control device</li>
-          <li><a href="https://relivesight.com/projects/deej/" target="_blank">deej x2</a> - two more volume control devices</li>
+          <li><a href="https://relivesight.com/projects/deejx2/" target="_blank">deej x2</a> - two more volume control devices</li>
           <li><a href="https://relivesight.com/projects/counter/" target="_blank">counter</a> - physical website pageview counter for my windowsil</li>
           <li><a href="https://relivesight.com/reference/wii/" target="_blank">wii softmod guide</a> - decent guide to softmodding your wii</li>
-          <li><a href="https://relivesight.com/projects/video/" target="_blank">video</a> - a hub for all video projects ive done (not too many atm)</li>
-          <li><a href="https://relivesight.com/projects/manga/" target="_blank">manga</a> - a hub for the one scanlation i've done</li>
+          <li><a href="https://relivesight.com/video/" target="_blank">video</a> - a hub for all video projects ive done (not too many atm)</li>
+          <li><a href="https://relivesight.com/manga/" target="_blank">manga</a> - a hub for the one scanlation i've done</li>
           <li><a href="https://relivesight.com/book/" target="_blank">book</a> - 1 million 'words' honestly just so i can say im a published author haha</li>
           <li><a href="https://relivesight.com/concept/chat/" target="_blank">chat</a> - a hidden chat page to connect you to other re:live members anonymously / no one uses it</li>
         </ul><p>
