--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -183,7 +183,7 @@
             <tr><td class="cmp">Chuunibyou demo Koi ga Shitai! </td><td>12</td><td>Tv</td><td class="a6">6.4</td><td>cute imagination fantasy romance </td></tr>
             <tr><td class="cmp">Houseki no Kuni </td><td>12</td><td>Tv</td><td class="a6">6.4</td><td>best cgi show of all time </td></tr>
             <tr><td class="cmp">Net-juu no Susume </td><td>10</td><td>Tv</td><td class="a6">6.4</td><td>fantastic symbolism</td></tr>
-            <tr><td class="pas">Saiki Kusuo no Ψ Nan (TV) </td><td>20</td><td>Tv</td><td class="a6">6.5</td><td>fun comedy</td></tr>
+            <tr><td class="cmp">Saiki Kusuo no Ψ Nan (TV) </td><td>20</td><td>Tv</td><td class="a6">6.5</td><td>fun comedy</td></tr>
             <tr><td class="cmp">Shoujo Shuumatsu Ryokou </td><td>12</td><td>Tv</td><td class="a6">6.4</td><td>really accurate postapocolyptic life</td></tr>
             <tr><td class="cmp">Hotarubi no Morie </td><td>1</td><td>Film</td><td class="a6">6.2</td><td>watched it cuz an amv lol</td></tr>
             <tr><td class="cmp">K-ON! </td><td>13</td><td>Tv</td><td class="a6">6.2</td><td>join the light music club today</td></tr>
@@ -215,7 +215,7 @@
             <tr><td class="cmp">Love Live! School idol project 2nd Season </td><td>13</td><td>Tv</td><td class="a5">5</td><td>love live!</td></tr>
             <tr><td class="cmp">Love Live! Sunshine!! </td><td>13</td><td>Tv</td><td class="a5">5</td><td>love live??</td></tr>
             <tr><td class="cmp">Love Live! Sunshine!! 2 </td><td>13</td><td>Tv</td><td class="a5">5</td><td>love live!!</td></tr>
-            <tr><td class="drp">Haikyuu!! </td><td>1</td><td>Tv</td><td class="a5">5</td><td>imagine paying attention during this</td></tr>
+            <tr><td class="cmp">Haikyuu!! </td><td>1</td><td>Tv</td><td class="a5">5</td><td>imagine paying attention during this</td></tr>
             <tr><td class="cmp">Shingeki no Kyojin: Lost Girls </td><td>3</td><td>Tv</td><td class="a5">5</td><td>dont remember this either</td></tr>
             <tr><td class="cmp">Hitoribocchi no Marumaru Seikatsu </td><td>12</td><td>Tv</td><td class="a5">5</td><td>cute anxiety comedy</td></tr>
             <tr><td class="cmp">Violet Evergarden Special </td><td>1</td><td>Tv</td><td class="a5">5</td><td>a fun special</td></tr>
