--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -151,7 +151,7 @@
             <tr><td class="fav">Mahou Shoujo Madoka☆Magica </td><td>12</td><td>Tv</td><td class="a8">8.6</td><td>just a cute magical girl show ☆</td></tr>
             <tr><td class="fav">Nichijou </td><td>26</td><td>Tv</td><td class="a8">8.6</td><td>top tier slice of life comedy</td></tr>
             <tr><td class="fav">Koe no Katachi </td><td>1</td><td>Film</td><td class="a8">8.4</td><td>sad hours</td></tr>
-            <tr><td class="fav">One Punch Man </td><td>12</td><td>Tv</td><td class="a8">8.3</td>not a gimmick<td></td></tr>
+            <tr><td class="fav">One Punch Man </td><td>12</td><td>Tv</td><td class="a8">8.3</td><td>not a gimmick</td></tr>
             <tr><td class="cmp">Boku no Hero Academia </td><td>13</td><td>Tv</td><td class="a8">8.2</td><td>good shounen </td></tr>
             <tr><td class="fav">Boku no Hero Academia 2 </td><td>25</td><td>Tv</td><td class="a8">8.2</td><td>best season</td></tr>
             <tr><td class="cmp">Boku no Hero Academia 3 </td><td>25</td><td>Tv</td><td class="a8">8.2</td><td>still good season</td></tr>
