--- a/index.html
+++ b/index.html
@@ -83,9 +83,15 @@
 <!--<p>feel free to leave a note in the guest-book while you're here!</p>
 <p>partially under construction right now! please mind any issues~</p>-->
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
-  <a href="/blog/" class="navi" ><img src="images/nav/flow.png">most recently updated page: blog <img src="images/nav/flow.png"></a>
+  <a href="/ongoing/" class="navi" ><img src="images/nav/flow.png">most recently updated page: ongoing <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
+  <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
+  <div class="col-sm-9 col-md-offset-1">
+    <h3 style="margin-bottom:10px;">12/05/20 </h3>
+    <p style="margin-bottom:30px;">the sound of a dissonant melody... ┈wait thats just christmas music ;</p>
+  </div>
+
   <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
   <div class="col-sm-9 col-md-offset-1">
     <h3 style="margin-bottom:10px;">11/07/20 </h3>
