--- a/projects/3dmodel/index.html
+++ b/projects/3dmodel/index.html
@@ -49,6 +49,20 @@
                 <p>time for printing, lets see how it turns out! (fast forward an hour) and i couldnt get the tolerances right after a few tries, so im calling it quits for today, got other stuff to do. hopefully i
                   watch tutorials lol~
                 </p>
+
+
+                <h1>Log 2: Keyboard Case Repair</h1>
+                <p>i need to re-model a keyboard case, so a perfect opportunity to learn more about modelling. its probably a bad idea but im hoping i can just import it into
+                  fusion and just wing it and edit it, we'll see how that goes...
+                </p>
+                <p>flash forward awhile and i learned how to import stls as meshes and convert them into BRep objects (by disabling the timeline), this allows me to edit them as i so desire
+                </p>
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/3dmodl/1.png" width="500px">
+                <p>hopefully my modificaitons turn out alright , i sent that out to the printer, now to figure out how to make the clips...</p>
+
+                <h1>Log 3: Keyboard Case Clips</h1>
+                <p>im a complete noob but i think the best thing to do first would be to take measurements and sketch it out. to be continued...</p>
+                  
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
