--- a/mobile/index.html
+++ b/mobile/index.html
@@ -80,6 +80,10 @@
 			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />-->
       <div class="row imgPixel">
  
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">12/05/20 </h3>
+          <p style="margin-bottom:30px;">the sound of a dissonant melody... ┈wait thats just christmas music ;</p>
+        </div>
     
   <div class="col-sm-9 col-md-offset-1">
     <h3 style="margin-bottom:10px;">11/07/20 </h3>
