--- a/highlights/index.html
+++ b/highlights/index.html
@@ -73,7 +73,7 @@
   
      <p>—「03://Off Site "Achievements"」<br>
      some of these will be linked to elsewhere, but here is a little hub of some of my 'achievements/feats'. it could also be that i made this section with the hope it encourages me to
-     increase the amount of things here, best of luck to (future) present me then! (sr) = speedrun
+     increase the amount of things here, best of luck to (future) present me then! (sr) = speedrun, all runs reflect their place at the time, places may have changed.
      </p>
      <ul>
          <li><a href="https://www.speedrun.com/cuphead/run/ylken7rz" target="_blank">(sr) cuphead - all bosses - regular, legacy - 30:28</a> - 85th place</li>
