nmhmmm snk final season is out

--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -100,7 +100,7 @@
         <br><br><center>
         <h1>Anime List</h1><br>
 
-        <p>Key</p>
+        <p>Key:</p>
         <table class="tableizer-table">
           <thead><tr>
             
@@ -109,10 +109,10 @@
             <tr><td>Status:</td><td class="cmp">Completed</td><td class="pas">Paused</td><td class="drp">Dropped</td><td class="wat">Watching</td><td class="fav">Favorites</td></tr>
           </tbody></table>
 
-        <p>Favorites</p>
+        <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-                   
+            <tr><td class="wat">Shingeki no Kyoujin</td><td>1</td><td>Tv</td><td class="a0">~</td><td>omg im so excited</td></tr>       
             <tr><td class="wat">Harmony </td><td>0</td><td>Film</td><td class="a0">~</td><td>looks alright</td></tr>
             <tr><td class="wat">Hisone to Maso-tan </td><td>2</td><td>Tv</td><td class="a0">~</td><td>cute so far</td></tr>
             <tr><td class="wat">Koukaku Kidoutai: Stand Alone Complex </td><td>1</td><td>Tv</td><td class="a0">~</td><td>finally checking it out</td></tr>
