--- a/projects/laptopkeeb/index.html
+++ b/projects/laptopkeeb/index.html
@@ -56,6 +56,16 @@
                 <p>bonus, my beautifully illustrated measurements:</p>
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/1.png" width="400px">
 
+          <h1>Log 2: Anything but That</h1>
+          <p>i didnt want to work on the clip design so i decided to finish the keyboard first (as seen on the aforementioned 3d modelling page)
+            i bought some <a target="_blank" href="https://www.amazon.com/gp/product/B01IYWTCWW/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">brass threaded inserts</a>
+            for the holes and was amazed at how easy it was to install them. just a touch of the soldering iron and them melted right into the plastic:
+          </p>
+          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/4.jpeg" width="500px">
+          <p>so now i just used some m3 screws and keycaps and finished off the base keyboard:</p>
+          <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/3.jpeg" width="500px">
+          <p>i would love to be done now, but i ventured to make a keyboard that could clip onto a laptop, so i intend to complete that, wish me luck again~</p>
+
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
