--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -23,9 +23,11 @@
         padding: 4px;
         margin: 3px;
         border: 1px solid white;
+        background-color: #141414; 
       }
       .tableizer-table th {
-        background-color: #104E8B; 
+        text-align: center;
+        background-color: #061b30; 
         color: white;
         font-weight: bold;
       }
