--- a/lists/games/index.html
+++ b/lists/games/index.html
@@ -133,7 +133,7 @@
                <tr><td class="fav">Terraria</td><td>Y</td><td>N</td><td>PC</td><td>Maybe</td><td>Speedrun, Glitch hunt</td></tr>
                <tr><td class="fin">Mountain</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td class="onl">Counter-Strike</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td class="nts">Minecraft</td><td>Y</td><td>N</td><td>PC</td><td>Maybe</td><td>Speedrun </td></tr>
+               <tr><td class="fin">Minecraft</td><td>Y</td><td>N</td><td>PC</td><td>Maybe</td><td>Speedrun </td></tr>
                <tr><td class="fin">Starbound</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>Glitch hunt</td></tr>
                <tr><td class="fav">Dark Souls III</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>bosses, no ember, no summons, no shield</td></tr>
                <tr><td class="ong">Dark Souls II</td><td>Y</td><td>N</td><td>PC</td><td>N</td><td>&nbsp;</td></tr>
