--- a/projects/3dmodel/index.html
+++ b/projects/3dmodel/index.html
@@ -61,8 +61,36 @@
                 <p>hopefully my modificaitons turn out alright , i sent that out to the printer, now to figure out how to make the clips...</p>
 
                 <h1>Log 3: Keyboard Case Clips</h1>
-                <p>im a complete noob but i think the best thing to do first would be to take measurements and sketch it out. to be continued...</p>
-                  
+                <p>im a complete noob but i think the best thing to do first would be to take measurements and sketch it out. 
+                  so i started by trying to make the part that will clip directly to the keyboard, im just winging it and not watching tutorials.
+                this is the left side, and my theory is that the clip will be too loose and slide a little:</p>
+                  <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/3dmodl/2.png" width="500px">
+                <p>well my theory was kinda wrong as its too tight where i intended it to go but too loose anywhere else,
+                  im adding some holes to try to hold it steady and thicken the walls so it doesnt break, but i can almost gurauntee that
+                  it won't fit the holes, i had trouble measuring and kinda just guessed:
+                </p>
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/3dmodl/3.png" width="500px">
+
+                <p>my measurements were off, but before redoing this and the clips for the side of the laptop, a quick side tangent:
+                </p>
+
+                <h1>Log 4: Agaping Repair</h1>
+                <p>i've always wanted a dactyl manuform that was connected as one, but i can't model a keyboard like that! so instead
+                  im stitching together two halves of a dactyl with my novice modelling "skills", here is the first attempt: 
+                </p>
+                <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/3dmodl/4.png" width="500px">
+                <p>features:</p>
+                <ul>
+                  <li><strike>being one keyboard</strike></li>
+                  <li>screw on bottom plate</li>
+                  <li>threaded inserts?</li>
+                  <li>teensy mount</li>
+                  <li>buttons in the middle?</li>
+                  <li>reset switch</li>
+                </ul>
+                <p>wow this is gunna involve more design that i thought, we'll see what i do next</p>
+
+
 <br>
    <p><a id="back" href="https://relivesight.com/ongoing/">back a page</a></p>
    <p>┈ ren ​♡</p>
