--- a/projects/laptopkeeb/index.html
+++ b/projects/laptopkeeb/index.html
@@ -51,7 +51,7 @@
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/2.jpeg" width="500px">
                 <p>now the issues. the case is just a tad too small for how thick the wires i put in are, so even before i design the clips i need to redesign the case.
                   that and i also don't have threaded inserts, so i need to design a case without threaded inserts. i have near no experience in fusion 360, so lets head over to the
-                  <a target="_blank" href="https://relivesight.com/ongoing/3dmodel">3d modelling learning page</a>~
+                  <a href="https://relivesight.com/ongoing/3dmodel">3d modelling learning page</a>~
                 </p>
                 <p>bonus, my beautifully illustrated measurements:</p>
                 <img src="https://vibrant-hodgkin-c6365a.netlify.app/project/laptopkeeb/1.png" width="400px">
