--- a/lists/anime/index.html
+++ b/lists/anime/index.html
@@ -112,11 +112,10 @@
         <p>Shows:</p>
         <table class="tableizer-table">
           <thead><tr><td>Name</td><td>Progress</td><td>Type</td><td>Score</td><td>Notes</td></tr></thead><tbody>
-            <tr><td class="wat">Shingeki no Kyoujin</td><td>1</td><td>Tv</td><td class="a0">~</td><td>omg im so excited</td></tr>       
+            <tr><td class="wat">Shingeki no Kyoujin</td><td>2</td><td>Tv</td><td class="a0">~</td><td>omg im so excited</td></tr>       
             <tr><td class="wat">Harmony </td><td>0</td><td>Film</td><td class="a0">~</td><td>looks alright</td></tr>
             <tr><td class="wat">Hisone to Maso-tan </td><td>2</td><td>Tv</td><td class="a0">~</td><td>cute so far</td></tr>
             <tr><td class="wat">Koukaku Kidoutai: Stand Alone Complex </td><td>1</td><td>Tv</td><td class="a0">~</td><td>finally checking it out</td></tr>
-            <tr><td class="wat">Code Geass: Hangyaku no Lelouch </td><td>18</td><td>Tv</td><td class="a0">~</td><td>cool eye guy</td></tr>
             <tr><td class="wat">Fire Force</td><td>1</td><td>Tv</td><td class="a0">~</td><td>alright so far</td></tr>
             <tr><td class="wat">Re:Zero kara Hajimeru Isekai Seikatsu 2nd Season</td><td>0</td><td>Tv</td><td class="a0">~</td><td>ill get around to it</td></tr>
             <tr><td class="fav">Fullmetal Alchemist: Brotherhood</td><td>64</td><td>Tv</td><td class="a9">9.6</td><td>good fun for the whole family</td></tr>
@@ -168,6 +167,7 @@
             <tr><td class="cmp">Rascal Does Not Dream of Dreaming Girl</td><td>1</td><td>Film</td><td class="a7">7.4</td><td>dreams of dreaming girl</td></tr>
             <tr><td class="fav">Yakusoku no Neverland </td><td>12</td><td>Tv</td><td class="a7">7.4</td><td>a great introduction to a great manga</td></tr>
             <tr><td class="fav">Made in Abyss </td><td>13</td><td>Tv</td><td class="a7">7.4</td><td>great premise, excited for s2</td></tr>
+            <tr><td class="wat">Code Geass: Hangyaku no Lelouch </td><td>18</td><td>Tv</td><td class="a7">7.3</td><td>cool eye guy</td></tr>
             <tr><td class="cmp">Boku Dake ga Inai Machi </td><td>12</td><td>Tv</td><td class="a7">7.2</td><td>totally shocking mystery</td></tr>
             <tr><td class="cmp">Steins;Gate: Kyoukaimenjou no Missing Link - Divide By Zero </td><td>1</td><td>Tv</td><td class="a7">7.1</td><td>steins;gate yes</td></tr>
             <tr><td class="fav">Mekakucity Actors </td><td>12</td><td>Tv</td><td class="a7">7.1</td><td>not good i just like kagepro</td></tr>
@@ -250,11 +250,9 @@
             <tr><td class="cmp">Love Hina Final Selection </td><td>1</td><td>Tv</td><td class="a4">4</td><td>more love live</td></tr>
             <tr><td class="cmp">Love Live! School idol project OVA </td><td>1</td><td>Tv</td><td class="a4">4</td><td>more love live</td></tr>
             <tr><td class="cmp">Mahouka Koukou no Rettousei </td><td>26</td><td>Tv</td><td class="a4">4</td><td>boring</td></tr>
-            <tr><td class="cmp">Mob Psycho Mini </td><td>6</td><td>Tv</td><td class="a4">4</td><td>i mean i love mob but </td></tr>
-            <tr><td class="cmp">Shingeki no Kyojin Kouhen: Jiyuu no Tsubasa </td><td>1</td><td>Tv</td><td class="a4">4</td><td>more extras</td></tr>
-            <tr><td class="cmp">Shingeki no Kyojin OVA </td><td>3</td><td>Tv</td><td class="a4">4</td><td>more more</td></tr>
             <tr><td class="cmp">Takanashi Rikka Kai: Chuunibyou demo Koi ga Shitai! Film </td><td>1</td><td>Film</td><td class="a4">4</td><td>more more more</td></tr>
             <tr><td class="cmp">Tsuki ga Kirei </td><td>12</td><td>Tv</td><td class="a4">4</td><td>cuteish bad cgi elemntary school romance</td></tr>
+            <tr><td class="cmp">God of Highschool </td><td>13</td><td>Tv</td><td class="a3">3.8</td><td>all over the place- really bad, then sometimes decent, was fun to watch tho</td></tr>
             <tr><td class="cmp">Overlord II </td><td>13</td><td>Tv</td><td class="a3">3.5</td><td>not great but i had fun</td></tr>
             <tr><td class="cmp">Overlord III </td><td>13</td><td>Tv</td><td class="a3">3.5</td><td>not great but i had fun v2</td></tr>
             <tr><td class="cmp">Kenja no Mago </td><td>12</td><td>Tv</td><td class="a3">3.2</td><td>was this an isekai? seems like it</td></tr>
@@ -304,6 +302,9 @@
          <tr><td class="drp">Star Driver: Kagayaki no Takuto </td><td>4</td><td>Tv</td><td class="a0">~</td><td>boring</td></tr>
          <tr><td class="drp">Aa! Megami-sama!: Sorezore no Tsubasa </td><td>1</td><td>Tv</td><td class="a0">~</td><td>what was this</td></tr>
          <tr><td class="drp">Aggressive Retsuko</td><td>4</td><td>Tv</td><td class="a0">~</td><td>not my thing</td></tr>
+         <tr><td class="cmp">Mob Psycho Mini </td><td>6</td><td>Tv</td><td class="a0">~</td><td>i mean i love mob but </td></tr>
+         <tr><td class="cmp">Shingeki no Kyojin Kouhen: Jiyuu no Tsubasa </td><td>1</td><td>Tv</td><td class="a0">~</td><td>more extras</td></tr>
+         <tr><td class="cmp">Shingeki no Kyojin OVA </td><td>3</td><td>Tv</td><td class="a0">~</td><td>more more</td></tr>
          <tr><td class="drp">Berserk </td><td>2</td><td>Tv</td><td class="a0">~</td><td>seems good but eh</td></tr>
          <tr><td class="drp">Blood-C </td><td>1</td><td>Tv</td><td class="a0">~</td><td>seems not good</td></tr>
          <tr><td class="drp">Dr. STONE </td><td>6</td><td>Tv</td><td class="a0">~</td><td>boringgggggggg but well produced</td></tr>
